grid-mixin.scss
//grid system mixin version

@import 'grid-settings';

@import 'grid-shared-mixins';

//make cells take up multiple columns worth of width
@mixin grid__cell--span($span, $totalCols, $important: ()){
	flex-grow: 1;
	@if ($grid-calc-support) {
		width: calc(#{$span} / #{$totalCols} * 100%) $important;
	} @else {
		width: ($span / $totalCols * 100%) $important;
	}
}

// legacy support has different defaults
$align-default: if($grid-legacy-support, stretch, left);
$wrap-default: if($grid-legacy-support, auto, true);

@mixin grid(
	$cols: auto,
	$gutter: false,
	$breakpoints: default,
	$inners: false,
	$vAlign: false,
	$align: $align-default,
	$space: false,
	$wrap: $wrap-default,
	$MQs: true,
	$outerGutters: false,
	$cellSpan: false,
	$ieFloat: false,
	$mini: false,
	$vertical: false,
	$stretch: false,
	$shrink: true,
	$resize: default
){
	box-sizing: border-box;
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex !important;
	align-content: stretch;
	border-color: transparent;

	//By default grids will stretch unless there is a column setting
	@if ($align-default == left and $align == left and $cols == auto and $space == false){
		$stretch: true;
	}

	//By default grids will not wrap unless there is a column setting
	@if ($wrap-default == true and $wrap == true and $cols == auto){
		$wrap: false;
	}

	@if ($vertical){
		flex-direction: column;
	}

	@if (not $mini){
		min-width: 100%;
	}

	@if ($wrap == true){
		flex-wrap: wrap;
	}

	@if ($grid-break-points != false){
		@include mq(max, $grid-page-width){
			@if ($MQs and $wrap == auto){
				flex-wrap: wrap;
			}
		}
	}

	@if($inners) {
		> * {
			display: flex;
			align-items: stretch;
			> * {
				display: block;
				width: 100%;
			}
		}
	}

	//grid cell styling
	> * {
		box-sizing: border-box;
		min-width: 0%;
		max-width: 100%;
		display: if($inners, flex, block);
		padding: 0;
		margin: 0;
		background-clip: padding-box!important;
		border: 0 solid transparent;

		$canGrow: $resize == true or $align == stretch or ($stretch == true and $resize == default);
		$canShrink: $resize == true or ($shrink == true and $resize == default);
		flex-grow: if($canGrow, 1, 0);
		flex-shrink: if($canShrink, 1, 0);

		//column widths
		@if(type-of($cols) == number){

			$breaks: '';

			@if ($breakpoints == default){
				$breaks: if(length($grid-bp-list) < $cols, false, map-get($grid-bp-list, $cols));
			} @else {
				$breaks: $breakpoints;
			}

			width: column-width($cols);

			//Applies the media queries for the break points
			@if($MQs or $breakpoints != default) {
				@include generate-column-breakpoints($breaks);
			}
		}

		//grid__inner styling
		> * {
			box-sizing: border-box;
		}
	}

	$colsAndGutter: $cols != auto and $gutter != false;
	$blockDisplayMode: $ieFloat == true or $stretch == false or $resize == false or $vertical or $align != 'stretch' or $space or $wrap == true or $colsAndGutter;

	//allows IE to use floats instead of display table without affecting modern browsers
	@if ($blockDisplayMode) {
		@include ieFloat;
	}

	@if ($grid-legacy-support) {
		//tabular backup for IE9 and below
		.no-flexbox &, .no-flexwrap & {
			display: if($blockDisplayMode, block, table) !important;

			> * {
				display: if($blockDisplayMode, block, table-cell);
				vertical-align: top;

				@if ($inners){
					> * { display: block; }
				}
			}

			@if ($vAlign){
				@if ($vAlign == 'top'){
					> * { vertical-align: top; }
				} @else if ($vAlign == 'center') {
					> * { vertical-align: middle; }
				} @else if ($vAlign == 'bottom') {
					> * { vertical-align: bottom; }
				}
			}

			@if($vertical){
				> * {
					width: 100%;
				}
			}
		}
	}

	//quick access to left,center and right alignments
	@if (($align != 'stretch' and $stretch == false) or $space) {
		> * {
			flex-grow: 0;
		}

		@if ($align != 'stretch' and $stretch == false){
			@if ($align == 'left') {
				justify-content: flex-start;
			} @else if ($align == 'center') {
				justify-content: center;
			} @else if ($align == 'right') {
				justify-content: flex-end;
			} @else {
				@warn 'invalid value for $align: "#{$align}". Valid values: left, center, right.';
			}
		}

		//quick access to space-between and space-around
		@if ($space) {
			@if ($space == 'between') {
				justify-content: space-between;
			} @else if ($space == 'around') {
				justify-content: space-around;
			} @else {
				@warn 'invalid value for $space: "#{$space}". Valid values: between, around.';
			}
		}

		@if ($grid-legacy-support) {
			.no-flexbox &, .no-flexwrap & {
				@if ($align == 'left') {
					text-align: left;
				} @else if ($align == 'right') {
					text-align: right;
				} @else {
					text-align: center;
				}
				> * {
					display: inline-block;
					float: none;
					margin-right: -4px;//removes space bar space
				}
			}
		}
	}

	//vertical alignment of cells
	@if ($vAlign){
		@if ($vAlign == 'center') {
			align-items: center;
		} @else if ($vAlign == 'top') {
			align-items: flex-start;
		} @else if ($vAlign == 'bottom') {
			align-items: flex-end;
		} @else {
			@warn 'invalid value for $vAlign: "#{$vAlign}". Valid values: top, center, bottom.';
		}
	}

	//grid--gutter-# styling
	@if ($gutter != false){
		border-style: solid;
		> *, & {
			@if ($grid-legacy-support) {
				.lt-ie9 & { border-color: $grid-gutter-ie-fallback; }
			}
		}

		@if (type-of($gutter) == 'string') {
			@if (map-get($grid-cell-gutters, $gutter)){
				$gutter: map-get($grid-cell-gutters, $gutter);
			} @else {
				@warn '"#{$gutter}" was not found in the $grid-cell-gutters variable';
			}
		}

		@include parse-gutter-data($gutter, 'mixin', $outerGutters);
	}

	//outer gutters
	@if ($outerGutters != false){
		$possibleMargins: (
			true: margin,
			v: margin-top margin-bottom,
			h: margin-left margin-right,
			top: margin-top,
			bottom: margin-bottom,
			left: margin-left,
			right: margin-right,
		);
		$marginSet: map-get($possibleMargins, $outerGutters);
		@each $margin in $marginSet {
			#{$margin}: 0;
		}
	}
}

